<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView android:text="@string/MyNanodegreeApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:paddingBottom="15dp"/>

        <Button
            android:id="@+id/button_spotifyStreamer"
            style="@style/PortfolioButton"
            android:text="@string/SpotifyStreameer"/>


        <Button
            android:id="@+id/button_scoresApp"
            style="@style/PortfolioButton"
            android:text="@string/ScoresApp"/>

        <Button
            android:id="@+id/button_libraryApp"
            style="@style/PortfolioButton"
            android:text="@string/LibraryApp"/>

        <Button
            android:id="@+id/button_buildItBigger"
            style="@style/PortfolioButton"
            android:text="@string/BuildItBigger"/>

        <Button
            android:id="@+id/button_xyzReader"
            style="@style/PortfolioButton"
            android:text="@string/XYZReader"/>

        <Button
            android:id="@+id/button_capstone"
            style="@style/PortfolioButton"
            android:text="@string/Capstone"/>

    </LinearLayout>


</ScrollView>

